The Qt stuff is building. Now I need to add ROS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,41 +1,42 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(gauges)
 
-set(GCC_COVERAGE_COMPILE_FLAGS "-g -Wno-enum-compare -std=c++11 -Wenum-compare -Wformat-security")
-set(GCC_COVERAGE_LINK_FLAGS    "-Wformat-security")
-
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
-set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
-
-# Use C++11
-set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
-
-find_package(catkin REQUIRED COMPONENTS 
-  roscpp
+#############################
+# Qt Stuff
+# See: https://wiki.qt.io/Using_CMake_build_system
+#############################
+set ( SOURCES
+ src/gauges.cpp
+ src/mainwindow.cpp
+ src/qcgaugewidget.cpp
 )
 
-find_package(Qt4 COMPONENTS QtCore QtGui REQUIRED)
-
-include_directories(include ${catkin_INCLUDE_DIRS} graphics)
-
-## Generate messages in the 'msg' folder
-#add_message_files( FILES )
-
-#add_service_files(
-#    FILES
-#)
-
-catkin_package(
-  INCLUDE_DIRS graphics
-  CATKIN_DEPENDS roscpp
-  DEPENDS Qt4
+set ( MOC_HEADERS
+ include/mainwindow.h
+ include/qcgaugewidget.h
 )
 
-include(${QT_USE_FILE})
+set ( UIS
+ resources/mainwindow.ui
+)
 
-link_directories(${catkin_LIBRARY_DIRS})
+# Next lines needed for building all Qt projects
+find_package( Qt4 REQUIRED )
+include( ${QT_USE_FILE} )
+add_definitions( ${QT_DEFINITIONS} )
+include_directories( ${CMAKE_BINARY_DIR} include )
 
-add_executable(gauges src/gauges.cpp)
-#add_dependencies(gauges)
-target_link_libraries(gauges ${catkin_LIBRARIES} ${QT_LIBRARIES} )
+
+# Next, using precompiler, compiler and linker
+
+# using Qt meta-system (precompiler)
+QT4_ADD_RESOURCES( RES_SOURCES ${RESOURCES} )
+QT4_WRAP_UI( UI_HEADERS ${UIS} )
+QT4_WRAP_CPP( MOC_SRCS ${MOC_HEADERS} )
+
+# compile
+add_executable( gauges ${SOURCES} ${MOC_SRCS} ${RES_SOURCES} ${UI_HEADERS} )
+
+# build it (link libraries)
+target_link_libraries( gauges ${QT_LIBRARIES} )
 
