--- a/package.xml
+++ b/package.xml
@@ -16,10 +16,9 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>libqt4-dev</build_depend>
-  <build_depend>qt4</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>qt4</run_depend>
+  <run_depend>libqt4-dev</run_depend>
 
   <export>
 
