Mimicing the rqt_example even more closely.

--- a/rqt_gauges/CMakeLists.txt
+++ b/rqt_gauges/CMakeLists.txt
@@ -34,28 +34,28 @@ roslint_cpp()
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS roscpp rqt_gui_cpp std_msgs
 #  DEPENDS system_lib
 )
 
-set (mainwindow_cpp_SRCS
-  src/mainwindow.cpp
-  src/qcgaugewidget.cpp
+set (my_plugin_cpp_SRCS
+  src/rqt_gauges/my_plugin.cpp
+  src/rqt_gauges/qcgaugewidget.cpp
 )
 
-set(mainwindow_cpp_HDRS
-  include/mainwindow.h
-  include/qcgaugewidget.h
+set(my_plugin_cpp_HDRS
+  include/rqt_gauges/my_plugin.h
+  include/rqt_gauges/qcgaugewidget.h
 )
 
-set(mainwindow_cpp_UIS
-  resources/mainwindow.ui
+set(my_plugin_cpp_UIS
+  src/rqt_gauges/my_plugin.ui
 )
 
-qt4_wrap_cpp(mainwindow_cpp_MOCS ${mainwindow_cpp_HDRS})
-qt4_wrap_ui(mainwindow_cpp_UIS_H ${mainwindow_cpp_UIS})
+qt4_wrap_cpp(my_plugin_cpp_MOCS ${my_plugin_cpp_HDRS})
+qt4_wrap_ui(my_plugin_cpp_UIS_H ${my_plugin_cpp_UIS})
 
 ###########
 ## Build ##
@@ -64,13 +64,13 @@ qt4_wrap_ui(mainwindow_cpp_UIS_H ${mainwindow_cpp_UIS})
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
+  include/rqt_gauges
   ${CMAKE_CURRENT_BINARY_DIR}/..
   ${catkin_INCLUDE_DIRS}
 )
 
 ## The library that defines the Qt stuff
-add_library(qcgaugewidget SHARED src/qcgaugewidget.cpp)
+add_library(qcgaugewidget SHARED src/rqt_gauges/qcgaugewidget.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(qcgaugewidget
@@ -81,9 +81,9 @@ target_link_libraries(qcgaugewidget
 
 ## Declare a cpp library
 add_library(${PROJECT_NAME}
-    ${mainwindow_cpp_SRCS}
-    ${mainwindow_cpp_MOCS}
-    ${mainwindow_cpp_UIS_H}
+    ${my_plugin_cpp_SRCS}
+    ${my_plugin_cpp_MOCS}
+    ${my_plugin_cpp_UIS_H}
     )
 
 ## Specify libraries to link a library or executable target against
