--- a/rqt_gauges/CMakeLists.txt
+++ b/rqt_gauges/CMakeLists.txt
@@ -24,6 +24,77 @@ catkin_python_setup()
 
 roslint_cpp()
 
+################################################
+## Declare ROS messages, services and actions ##
+################################################
+
+## To declare and build messages, services or actions from within this
+## package, follow these steps:
+## * Let MSG_DEP_SET be the set of packages whose message types you use in
+##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
+## * In the file package.xml:
+##   * add a build_depend tag for "message_generation"
+##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
+##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
+##     but can be declared for certainty nonetheless:
+##     * add a run_depend tag for "message_runtime"
+## * In this file (CMakeLists.txt):
+##   * add "message_generation" and every package in MSG_DEP_SET to
+##     find_package(catkin REQUIRED COMPONENTS ...)
+##   * add "message_runtime" and every package in MSG_DEP_SET to
+##     catkin_package(CATKIN_DEPENDS ...)
+##   * uncomment the add_*_files sections below as needed
+##     and list every .msg/.srv/.action file to be processed
+##   * uncomment the generate_messages entry below
+##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
+
+## Generate messages in the 'msg' folder
+# add_message_files(
+#   FILES
+#   Message1.msg
+#   Message2.msg
+# )
+
+## Generate services in the 'srv' folder
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
+
+## Generate actions in the 'action' folder
+# add_action_files(
+#   FILES
+#   Action1.action
+#   Action2.action
+# )
+
+## Generate added messages and services with any dependencies listed here
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+# )
+
+################################################
+## Declare ROS dynamic reconfigure parameters ##
+################################################
+
+## To declare and build dynamic reconfigure parameters within this
+## package, follow these steps:
+## * In the file package.xml:
+##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
+## * In this file (CMakeLists.txt):
+##   * add "dynamic_reconfigure" to
+##     find_package(catkin REQUIRED COMPONENTS ...)
+##   * uncomment the "generate_dynamic_reconfigure_options" section below
+##     and list every .cfg file to be processed
+
+## Generate dynamic reconfigure parameters in the 'cfg' folder
+# generate_dynamic_reconfigure_options(
+#   cfg/DynReconf1.cfg
+#   cfg/DynReconf2.cfg
+# )
+
 ###################################
 ## catkin specific configuration ##
 ###################################
@@ -34,28 +105,27 @@ roslint_cpp()
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+#  INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS roscpp rqt_gui_cpp std_msgs
 #  DEPENDS system_lib
 )
 
-set (my_plugin_cpp_SRCS
+
+set (rqt_gauges_SRCS
   src/rqt_gauges/my_plugin.cpp
-  src/rqt_gauges/qcgaugewidget.cpp
 )
 
-set(my_plugin_cpp_HDRS
+set(rqt_gauges_HDRS
   include/rqt_gauges/my_plugin.h
-  include/rqt_gauges/qcgaugewidget.h
 )
 
-set(my_plugin_cpp_UIS
+set(rqt_gauges_UIS
   src/rqt_gauges/my_plugin.ui
 )
 
-qt4_wrap_cpp(my_plugin_cpp_MOCS ${my_plugin_cpp_HDRS})
-qt4_wrap_ui(my_plugin_cpp_UIS_H ${my_plugin_cpp_UIS})
+qt4_wrap_cpp(rqt_gauges_MOCS ${rqt_gauges_HDRS})
+qt4_wrap_ui(rqt_gauges_UIS_H ${rqt_gauges_UIS})
 
 ###########
 ## Build ##
@@ -64,7 +134,7 @@ qt4_wrap_ui(my_plugin_cpp_UIS_H ${my_plugin_cpp_UIS})
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include/rqt_gauges
+  include
   ${CMAKE_CURRENT_BINARY_DIR}/..
   ${catkin_INCLUDE_DIRS}
 )
@@ -81,9 +151,9 @@ target_link_libraries(qcgaugewidget
 
 ## Declare a cpp library
 add_library(${PROJECT_NAME}
-    ${my_plugin_cpp_SRCS}
-    ${my_plugin_cpp_MOCS}
-    ${my_plugin_cpp_UIS_H}
+    ${rqt_gauges_SRCS}
+    ${rqt_gauges_MOCS}
+    ${rqt_gauges_UIS_H}
     )
 
 ## Specify libraries to link a library or executable target against
@@ -93,3 +163,65 @@ target_link_libraries(${PROJECT_NAME}
   ${QT_QTCORE_LIBRARY}
   ${QT_QTGUI_LIBRARY}
 )
+
+## Declare a C++ executable
+# add_executable(rqt_gauges_node src/rqt_gauges_node.cpp)
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+# add_dependencies(rqt_gauges_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+## Specify libraries to link a library or executable target against
+#target_link_libraries(${PROJECT_NAME}
+#  ${catkin_LIBRARIES}
+#  ${QT_QTCORE_LIBRARY}
+#  ${QT_QTGUI_LIBRARY}
+#)
+
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+# install(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark executables and/or libraries for installation
+# install(TARGETS rqt_gauges rqt_gauges_node
+#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark cpp header files for installation
+# install(DIRECTORY include/${PROJECT_NAME}/
+#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#   FILES_MATCHING PATTERN "*.h"
+#   PATTERN ".svn" EXCLUDE
+# )
+
+## Mark other files for installation (e.g. launch and bag files, etc.)
+# install(FILES
+#   # myfile1
+#   # myfile2
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
+
+#############
+## Testing ##
+#############
+
+## Add gtest based cpp test target and link libraries
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_rqt_gauges.cpp)
+# if(TARGET ${PROJECT_NAME}-test)
+#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+# endif()
+
+## Add folders to be run by python nosetests
+# catkin_add_nosetests(test)
