Sweet, it works! Need to add the other attributes of the needle.

--- a/rqt_gauges/CMakeLists.txt
+++ b/rqt_gauges/CMakeLists.txt
@@ -118,6 +118,7 @@ set (rqt_gauges_SRCS
 
 set(rqt_gauges_HDRS
   include/rqt_gauges/my_plugin.h
+  include/rqt_gauges/qcgaugewidget.h
 )
 
 set(rqt_gauges_UIS
